# agentworks

./: .cspell.json  .editorconfig  .git-blame-ignore-revs  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  release-please-config.json  rulesync.jsonc  rulesync.local.jsonc.example
cli/: CHANGELOG.md  README.md  pyproject.toml
cli/agentworks/: __init__.py  apt.py  bootstrap.py  catalog.py  catalog.toml  cli.py  completion.zsh  config.py  db.py  declared_resource.py  doctor.py  env_compat.py  errors.py  exec_validation.py  install_commands.py  nerf-config.yaml  output.py  prompt.py  remote_exec.py  resource_loading.py  sample-config.toml  source_location.py  sources.py  ssh.py  ssh_config.py
cli/agentworks/agents/: grants.py  initializer.py  kinds.py  manager.py  nodes.py  realize.py  template.py  templates.py
cli/agentworks/capabilities/: README.md  __init__.py  base.py
cli/agentworks/cli/: __init__.py  _app.py  _entry.py  _errors.py  _helpers.py  _typer_output.py
cli/agentworks/completions/: __init__.py  bash.py  install.py  powershell.py  spec.py  zsh.py
cli/agentworks/config/: __init__.py  load.py  loaders_core.py  loaders_resources.py  loaders_secrets.py  loaders_sessions.py  models.py  validation.py
cli/agentworks/db/: __init__.py  converters.py  database.py  migrations.py  models.py
cli/agentworks/env/: __init__.py  compose.py  entry.py  exports.py  identity.py  merge.py  show.py
cli/agentworks/git_credentials/: __init__.py  azdo.py  base.py  credential.py  github.py  kinds.py  nodes.py
cli/agentworks/git_hosts/: azdo.py  base.py  github.py
cli/agentworks/manifests/: __init__.py  builtin.py  decode.py  deprecated_fields.py  envelope.py  loader.py  samples.py
cli/agentworks/migrate/: __init__.py  execute.py  planning.py  render.py  toml_edit.py  verify.py
cli/agentworks/orchestration/: __init__.py  activation.py  node.py  readiness.py  secrets.py  unwind.py  walk.py
cli/agentworks/resources/: __init__.py  access.py  inspect.py  kind.py  origin.py  reference.py  registry.py  render.py  requirement.py  walk.py
cli/agentworks/secrets/: __init__.py  backends.py  base.py  env_var.py  inspect.py  kinds.py  onepassword.py  orchestration.py  prompt.py  providers.py  resolve.py  resolver.py
cli/agentworks/sessions/: console.py  kinds.py  layouts.py  manager.py  multi_console.py  multi_console_layout.py  nodes.py  template.py  templates.py  tmux.py
cli/agentworks/tasks/: console.py  manager.py  templates.py  tmux.py
cli/agentworks/transports/: __init__.py  _shared.py  base.py  lima.py  remote_lima.py  ssh.py  wsl2.py
cli/agentworks/vm_hosts/: manager.py
cli/agentworks/vms/: admin.py  backup.py  base.py  bootstrap_script.py  cloud_init.py  hardening.py  init_log.py  initializer.py  kinds.py  manager.py  nodes.py  sites.py  skel.py  tailscale_dns.py  template.py  templates.py
cli/agentworks/workspaces/: __init__.py  kinds.py  manager.py  nodes.py  realize.py  template.py  templates.py  tmuxinator.py
cli/tests/: _consoles_support.py  _initializer_support.py  _secrets_eager_support.py  _session_ephemeral_support.py  conftest.py  orchestrated_fixtures.py  test_admin_home_permissions.py  test_agents.py  test_apt.py  test_apt_declared_at.py  test_authorized_keys.py  test_azure_credential_caching.py  test_azure_vm_size_selection.py  test_batch_sessions.py  test_bootstrap_script.py  test_builtin_catalog_parity.py  test_builtin_entries_parity.py  test_capability_base.py  test_capability_config_contract.py  test_catalog.py  test_catalog_declared_at.py  test_check_session_alive.py  test_cli_helpers.py  test_cloud_init.py  test_completions.py  test_config.py  test_config_deprecation_warnings.py  test_config_dir_override.py  test_config_env_and_secrets.py  test_config_line_capture.py  test_config_resource_read_guard.py  test_config_section_line_scanner.py  test_config_vm_workspaces.py  test_consoles.py  test_consoles_attach.py  test_consoles_layout.py  test_consoles_live_sync.py  test_consoles_orchestration.py  test_consoles_restore.py  test_consoles_shell_panes.py  (+95 more)
cli/tests/agents/: test_agent_home_permissions.py  test_create_reinit_orchestrated.py  test_delete_grant_revoke_orchestrated.py  test_shell_exec_orchestrated.py
cli/tests/manifests/: test_decode_parity.py  test_deprecated_fields.py  test_loader_and_envelope.py  test_samples.py
cli/tests/orchestration/: test_activation.py  test_node_protocol.py  test_readiness.py  test_secrets.py  test_unwind.py  test_walk.py
cli/tests/resources/: test_access.py  test_admin_template_plurified.py  test_always_materialize.py  test_catalog_kind.py  test_cycle_detection.py  test_declared_resource.py  test_finalize_pass.py  test_git_credential_provider_kind.py  test_harness_kind.py  test_install_resource_kinds.py  test_instances.py  test_kind_registry.py  test_kind_synthesize_empty.py  test_origin.py  test_phase0_vocabulary.py  test_phase3_naming_consistency.py  test_reference.py  test_registry_collisions.py  test_registry_lifecycle.py  test_requirement.py  test_secret_backend_kind.py  test_secret_config_kind.py  test_singleton_publishing.py  test_template_kinds.py  test_vm_template_kind.py
cli/tests/secrets/: test_backends.py  test_onepassword.py  test_providers.py  test_resolver_seed.py
cli/tests/sessions/: test_claude_code_oauth_orchestrated.py  test_claude_code_orchestrated.py  test_console_attach_orchestrated.py  test_create_restart_orchestrated.py  test_session_list_harness.py  test_session_nodes.py  test_session_template_surface.py  test_singular_batch_orchestrated.py
cli/tests/transports/: conftest.py  test_abc.py  test_factories.py  test_lima.py  test_remote_lima.py  test_ssh.py  test_wsl2.py
cli/tests/vms/: test_add_git_credential_orchestrated.py  test_azure_preflight.py  test_backup_vm.py  test_bind_platform.py  test_create_reinit_orchestrated.py  test_create_vm_dispatch.py  test_delete_vm_gating.py  test_describe_vm.py  test_ensure_active.py  test_legacy_site_sections.py  test_lifecycle_orchestrated.py  test_vm_nodes.py  (+16 more)
(+383 files in other folders)
