[project]
name = "agentworks-cli"
version = "0.4.0"
description = "CLI for orchestrating workspace lifecycle across multiple compute targets"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Scot Hastings (Wayfarer Labs)" },
]
dependencies = [
    "typer>=0.24.1",
    "azure-identity>=1.25.1",
    "azure-mgmt-compute>=37.0.1",
    "azure-mgmt-network>=29.0.0",
    "nerftools>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/WayfarerLabs/agentworks"
Repository = "https://github.com/WayfarerLabs/agentworks"
Issues = "https://github.com/WayfarerLabs/agentworks/issues"

[project.scripts]
agentworks = "agentworks.cli:main"
agw = "agentworks.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Distribution name (`agentworks-cli`) and import package name (`agentworks`) differ
# because `agentworks` is taken on PyPI. Tell hatchling explicitly which package
# to bundle so it doesn't try to auto-discover an `agentworks_cli/` directory.
[tool.hatch.build.targets.wheel]
packages = ["agentworks"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TCH"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that probe the real environment (filesystem, subprocesses, database)",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "mypy>=1.19.1",
    "pytest>=9.0.0",
]
