[project]
name = "agentworks-cli"
version = "0.10.0"
description = "CLI for orchestrating workspace lifecycle across multiple compute targets"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Scot Hastings (Wayfarer Labs)" },
]
dependencies = [
    "typer>=0.24.1",
    "azure-identity>=1.25.1",
    "azure-mgmt-compute>=37.0.1",
    "azure-mgmt-network>=29.0.0",
]

[project.urls]
Homepage = "https://github.com/WayfarerLabs/agentworks"
Repository = "https://github.com/WayfarerLabs/agentworks"
Issues = "https://github.com/WayfarerLabs/agentworks/issues"

[project.scripts]
agentworks = "agentworks.cli:main"
agw = "agentworks.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Distribution name (`agentworks-cli`) and import package name (`agentworks`) differ
# because `agentworks` is taken on PyPI. Tell hatchling explicitly which package
# to bundle so it doesn't try to auto-discover an `agentworks_cli/` directory.
[tool.hatch.build.targets.wheel]
packages = ["agentworks"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TCH"]
# Import order in this file is meaningful: it controls the order command
# groups appear in `agentworks --help`. isort would otherwise reflow it.
"agentworks/cli/commands/__init__.py" = ["I001"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that probe the real environment (filesystem, subprocesses, database)",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

# Tests: relax the noisy strict-mode + stub-pattern codes while still
# catching the load-bearing checks (``[attr-defined]`` catches renamed
# symbols, ``[func-returns-value]`` catches ``x = void_fn()``, etc.).
# The disabled codes are dominated by:
#   - ``[arg-type]``: hand-rolled ``_StubConfig`` classes passed where
#     ``Config`` is expected. Legitimate ducktyping; the type system
#     can't see through it without rewriting every test stub as a
#     Protocol or casting at every call site.
#   - ``[no-untyped-def]``: test functions returning ``None`` don't
#     need an explicit ``-> None`` annotation.
#   - ``[type-arg]``: bare ``dict`` / ``tuple`` in test fixtures.
#   - ``[unused-ignore]``: stale ``# type: ignore`` markers in tests.
#   - ``[func-returns-value]``: the tracking-lambda idiom
#     ``lambda *a: log.append(*a) or 0`` -- ``append`` returns
#     ``None`` but the ``or 0`` makes the whole expression a known
#     value. Real bug class in production; idiomatic noise in tests.
[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = [
    "arg-type",
    "no-untyped-def",
    "type-arg",
    "unused-ignore",
    "func-returns-value",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "mypy>=1.19.1",
    "pytest>=9.0.0",
]
